--- a/_sub/moondrop.mkd
+++ b/_sub/moondrop.mkd
@@ -42,6 +42,11 @@ Distant plan B is 74 fuji john alden ketch.  Looks much nicer than moondrop in p
 
 So, insha Allah, I might have made a verbal MOU to buy Moondrop.  Best case- she's mine, she's at keehi shortly, Josh and I transfer things smoothly, and soon I'm the one living on Moondrop at least part time.  Cleaning, servicing, with all my heart and love.  Still bike'n'hike, still work, still clean, nothing else change.  Except my heart will be overflowing.  
 
+
+### 10 June
+
+
+
 <a name ="eof">
 ### eof
 </a>
